# calculator

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md
console/: CMakeLists.txt  arithmetic.h  lexer-set.c  lexer-set.h  main.c  main.cpp  opt.c  opt.h  parser-set.h  solve.h  solver.c
core/: CMakeLists.txt
core/include/: array.h  ast.h  core-def.h  cstring.h  error.h  hashTable.h  ir.h  lexer.h  list.h  parser.h  scope.h  solv.h  stack.h  symbolTable.h  tokens.h  transform.h  tree.h
core/include/core/io/: io.h
core/src/: cstring.c  hashTable.c  io.c  ir.c  lexer.c  list.c  parser.c  pool.c  stack.c  tokens.c  transform.c  tree.c
include/: arithmetic.h  array.h  ast.h  core-def.h  cstring.h  error.h  hashTable.h  ir.h  lexer.h  list.h  parser.h  scope.h  snt_pool.h  solve.h  stack.h  symbolTable.h  tokens.h  transform.h  tree.h
include/core/io/: io.h
math/: CMakeLists.txt  arithmetic.h  lexer-set.c  lexer-set.h  parser-set.h  parset-set.c  semantic-analysis.c  solve.c  solve.h  solver.c
math/test/: CMakeLists.txt
math/test/unit-testing/: lexer.cpp
samples/: algebra.ms  base.ms
src/: hashTable.c  io.c  lexer.c  list.c  main.c  parser.c  pool.c  solve.c  stack.c  string_utility.c  string_utility.h  tokens.c  transform.c  tree.c
test/: CMakeLists.txt
test/unit-testing/: CMakeLists.txt
test/unit-testing/src/: lexer.cpp  parser.cpp
