
FILE(GLOB SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

#TODO relocate to the core.
# Core library for adding support for plugin.
ADD_LIBRARY(solver-math ${SOURCE_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(solver-math m solver-core)
TARGET_INCLUDE_DIRECTORIES(solver-math PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
SET_TARGET_PROPERTIES(solver-math PROPERTIES LANGUAGE C)
INSTALL(TARGETS solver-math DESTINATION lib)