
FILE(GLOB SOLVER_MATH_SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
FILE(GLOB SOLVER_MATH_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

#TODO relocate to the core.
# Core library for adding support for plugin.
ADD_LIBRARY(solver-math ${SOLVER_MATH_SOURCE_FILES} ${SOLVER_MATH_HEADER_FILES})
TARGET_LINK_LIBRARIES(solver-math m solver-core)
TARGET_INCLUDE_DIRECTORIES(solver-math PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
SET_TARGET_PROPERTIES(solver-math PROPERTIES LANGUAGE C)
INSTALL(TARGETS solver-math DESTINATION lib)

# Test
IF(BUILD_WITH_TEST)
	ENABLE_TESTING()
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test)
ENDIF()
